# 2djourney

./: .gitignore  CMakeLists.txt  README.md  build-linux.sh  build-windows.bat  hgh  manual.md
.github/workflows/: cpplint.yml
include/: actor.h  b2DebugDraw.h  core.h  generator.h  object.h  player.h  text.h  utils.h
include/objects/: background.h  debugInformer.h  fpsCounter.h  map.h  pauseScreen.h  player.h  tile.h
resources/drawable/: copyright.txt
src/: actor.cpp  b2DebugDraw.cpp  core.cpp  generator.cpp  main.cpp  object.cpp  object.h  player.cpp  text.cpp  utils.cpp
src/objects/: background.cpp  debugInformer.cpp  fpsCounter.cpp  map.cpp  pauseScreen.cpp  player.cpp  tile.cpp
